# cargo-fuzz

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yml  main.yml
etc/docker/: .gitignore  Dockerfile  Makefile
etc/testcrate/: Cargo.toml
etc/testcrate/fuzz/: Cargo.toml
etc/testcrate/fuzz/fuzzers/: fuzzer_script_1.rs
scripts/: deploy.sh  run.sh
src/: main.rs  options.rs  project.rs  rustc_version.rs  templates.rs  utils.rs
src/options/: add.rs  build.rs  check.rs  cmin.rs  coverage.rs  debugfmt.rs  fmt.rs  init.rs  list.rs  run.rs  tmin.rs
test/: run.sh
test/testcrate/: Cargo.toml
test/testcrate/src/: lib.rs
testcrate/: .gitignore  Cargo.toml
testcrate/src/: lib.rs
tests/tests/: main.rs  project.rs
