[workspace]
members = ["."]

[package]
name = "cargo-fuzz"
version = "0.12.0"
authors = ["The rust-fuzz Project Developers"]
license = "MIT OR Apache-2.0"
description = "A `cargo` subcommand for fuzzing with `libFuzzer`! Easy to use!"
readme = "README.md"
repository = "https://github.com/rust-fuzz/cargo-fuzz/"
categories = ["development-tools::testing"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
current_platform = "0.2.0"
clap = { version = "4.0.29", features = ["derive", "deprecated"] }
tempfile = "3.3.0"
toml = "0.5.9"
rustc_version = "0.4.0"
cargo_metadata = "0.18.1"

[target.'cfg(target_env = "msvc")'.dependencies]
cc = "1.1"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security","Win32_System_Threading", "Win32_System_JobObjects"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
