[workspace]
members = ["."]

[package]
name = "cargo-fuzz"
version = "0.13.1"
authors = ["The rust-fuzz Project Developers"]
license = "MIT OR Apache-2.0"
description = "A `cargo` subcommand for fuzzing with `libFuzzer`! Easy to use!"
readme = "README.md"
repository = "https://github.com/rust-fuzz/cargo-fuzz/"
categories = ["development-tools::testing"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
cargo-config2 = "0.1.19"
clap = { version = "4.0.29", features = ["derive", "deprecated"] }
tempfile = "3.3.0"
toml = "0.5.9"
rustc_version = "0.4.0"
cargo_metadata = "0.18.1"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
